# streamlit_react_audio_recorder

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
e2e/: test_template.py
streamlit_react_audio_recorder/: __init__.py  example.py
streamlit_react_audio_recorder/frontend/: .gitignore  package.json
