[tool.poetry]
name = "streamlit-react-audio-recorder"
version = "0.1.0"
description = "Streamlit react audio recorder component"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.29.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.42.0"
pytest = "^7.4.3"
playwright = "^1.40.0"
requests = "2.29.0"
pytest-playwright-snapshot = "^1.0"
pytest-rerunfailures = "^13.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
